wip: login page

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,3 +3,9 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@layer components {
+  .std-input-field {
+    @apply border-solid rounded-2xl border-gray-400 border-2 px-4 my-2;
+  }
+}
