--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -6,13 +6,22 @@
 
 @layer components {
   .std-input-field {
-    @apply border-solid rounded-2xl border-gray-400 border-2 px-4 my-2;
+    @apply border-solid rounded-2xl border-2 my-2;
+  }
+  .login-input-container {
+    @apply text-white flex h-10 pr-4 bg-gray-300/30 border-[#93a298] drop-shadow-2xl
+  }
+  .login-input-field {
+    @apply px-2 w-full focus:ring-0 focus:border-0 focus:outline-0
   }
   .std-button {
     @apply border-solid rounded-2xl border-2 px-4 h-10 leading-10
   }
+  .button-login {
+    @apply bg-white w-full text-[#183723]
+  }
   .button-positive-action {
-    @apply border-green-600 hover:bg-green-600 hover:text-white hover:drop-shadow-lg
+    @apply bg-[#385C48] text-white drop-shadow-lg
   }
   .button-neutral-action {
     @apply border-blue-600 hover:bg-blue-600 hover:text-white hover:drop-shadow-lg
@@ -20,7 +29,24 @@
   .button-negative-action {
     @apply border-red-600 hover:bg-red-600 hover:text-white hover:drop-shadow-lg
   }
+  .button-hover {
+    @apply hover:bg-[#f9f5b3] hover:text-[#183723]
+  }
   .std-border-bottom {
     @apply border-b-2 border-gray-500
+  }
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    background-color: unset !important;
+    -webkit-text-fill-color: #fff;
+    -webkit-box-shadow: 0 0 0px 1000px rgb(0 0 0 / 0.) inset;
+    transition: background-color 5000s ease-in-out 0s;
   }
 }
